--- a/common/gtk-3.0/3.20/gtk-light.css
+++ b/common/gtk-3.0/3.20/gtk-light.css
@@ -4220,9 +4220,9 @@ PanelToplevel,
 PanelWidget,
 PanelApplet,
 .gnome-panel-menu-bar {
-  color: #F3F3F5;
+  color: #3c3c3e;
   text-shadow: 0 -1px rgba(0, 0, 0, 0.7);
-  background-image: linear-gradient(to bottom, #4f5154, #3d3e40);
+  background-image: linear-gradient(to bottom, #f7f7f7, #eaeaed);
   box-shadow: inset 0 2px rgba(255, 255, 255, 0.15), inset 0 1px black, inset 0 -1px black; }
 
 .gnome-panel-menu-bar.menubar > .menuitem:hover,
@@ -4238,18 +4238,18 @@ PanelApplet > GtkMenuBar.menubar > .menuitem:hover {
 
 #tasklist-button,
 #tasklist-button:backdrop {
-  color: #F3F3F5;
-  outline-color: rgba(243, 243, 245, 0.3);
-  background-image: linear-gradient(to bottom, #4f5053, #343436);
-  text-shadow: 0 -1px rgba(0, 0, 0, 0.7);
-  -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.7); }
+  color: #3c3c3e;
+  outline-color: rgba(60, 60, 62, 0.3);
+  background-image: linear-gradient(to bottom, #f4f4f4, #e2e2e4);
+  text-shadow: 0 -1px white;
+  -gtk-icon-shadow: 0 -1px white; }
   #tasklist-button:hover,
   #tasklist-button:backdrop:hover {
-    color: #F3F3F5;
-    outline-color: rgba(243, 243, 245, 0.3);
-    background-image: linear-gradient(to bottom, #5e6064, #393A3B);
-    text-shadow: 0 -1px rgba(0, 0, 0, 0.7);
-    -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.7); }
+    color: #3c3c3e;
+    outline-color: rgba(60, 60, 62, 0.3);
+    background-image: linear-gradient(to bottom, #ffffff, #e5e5e5);
+    text-shadow: 0 -1px white;
+    -gtk-icon-shadow: 0 -1px white; }
   #tasklist-button:active, #tasklist-button:active:hover, #tasklist-button:checked, #tasklist-button:checked:hover,
   #tasklist-button:backdrop:active,
   #tasklist-button:backdrop:active:hover,
@@ -4257,7 +4257,7 @@ PanelApplet > GtkMenuBar.menubar > .menuitem:hover {
   #tasklist-button:backdrop:checked:hover {
     color: #ffffff;
     outline-color: rgba(255, 255, 255, 0.3);
-    background-image: linear-gradient(to bottom, #242525, #37383A);
+    background-image: linear-gradient(to bottom, #6a6a6c, #949596);
     text-shadow: 0 -1px rgba(0, 0, 0, 0.4);
     -gtk-icon-shadow: 0 -1px rgba(0, 0, 0, 0.4);
     box-shadow: inset 0 1px 2px rgba(0, 0, 0, 0.2);
