--- a/common/gtk-3.0/3.20/gtk.css
+++ b/common/gtk-3.0/3.20/gtk.css
@@ -4398,7 +4398,7 @@ ClockBox {
 .panel {
   background-color: transparent;
   color: white;
-  font-weight: bold;
+  /*font-weight: bold;*/
   text-shadow: 0 1px 2px rgba(0, 0, 0, 0.6);
   -gtk-icon-shadow: 0 1px 2px rgba(0, 0, 0, 0.6); }
 
@@ -5099,6 +5099,10 @@ UnityPanelWidget,
   box-shadow: inset 0 1px rgba(255, 255, 255, 0.15);
   border: 1px solid #171819;
   border-bottom: none; }
+
+.panel, .panel button {
+  color: #F3F3F5;
+}
 
 @define-color theme_fg_color #3c3c3e;
 @define-color theme_text_color #3c3c3e;
